crates/toml_edit/tests/snapshots/invalid/ext/datetime/offset-minus-missing-hour-minute-sep.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-09T09:09:09.09+0909
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
invalid offset, expected `:` (HH:MM)
